--- a/Accentos/Base.lproj/Main.storyboard
+++ b/Accentos/Base.lproj/Main.storyboard
@@ -69,7 +69,7 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vlF-8i-VEt">
-                                <rect key="frame" x="5" y="25" width="50" height="50"/>
+                                <rect key="frame" x="5" y="35" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="YBe-ER-bpd"/>
                                     <constraint firstAttribute="width" constant="50" id="io8-PF-ftK"/>
@@ -84,9 +84,9 @@
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="bBp-1y-Rx8" firstAttribute="bottom" secondItem="hmF-F0-gWQ" secondAttribute="bottom" constant="250" id="180-ur-542"/>
-                            <constraint firstItem="vlF-8i-VEt" firstAttribute="top" secondItem="bBp-1y-Rx8" secondAttribute="top" constant="5" id="HwJ-cq-hOP"/>
                             <constraint firstItem="vlF-8i-VEt" firstAttribute="leading" secondItem="bBp-1y-Rx8" secondAttribute="leading" constant="5" id="Iic-9N-FYz"/>
                             <constraint firstItem="bBp-1y-Rx8" firstAttribute="trailing" secondItem="hmF-F0-gWQ" secondAttribute="trailing" id="VpY-lS-4I8"/>
+                            <constraint firstItem="vlF-8i-VEt" firstAttribute="top" secondItem="bBp-1y-Rx8" secondAttribute="top" constant="15" id="vEa-mM-eYk"/>
                             <constraint firstItem="hmF-F0-gWQ" firstAttribute="leading" secondItem="bBp-1y-Rx8" secondAttribute="leading" id="yCM-k0-mLv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="bBp-1y-Rx8"/>
@@ -274,9 +274,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kzh-rP-FMu">
-                                <rect key="frame" x="5" y="25" width="50" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kzh-rP-FMu">
+                                <rect key="frame" x="5" y="35" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="4ih-4t-36d"/>
+                                    <constraint firstAttribute="height" constant="50" id="c3E-a3-K7w"/>
+                                </constraints>
                                 <state key="normal" image="Arrows-Back-icon"/>
                                 <connections>
                                     <action selector="closeView:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LWf-6J-cLj"/>
@@ -328,9 +331,11 @@
                         <color key="backgroundColor" red="0.99215686270000003" green="0.62745098040000002" blue="0.56862745100000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <constraints>
+                            <constraint firstItem="Kzh-rP-FMu" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="15" id="58D-oK-3Mb"/>
                             <constraint firstItem="rxK-7Z-yKJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="LT0-Qz-3mj"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rxK-7Z-yKJ" secondAttribute="trailing" id="OwE-nJ-Kax"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="rxK-7Z-yKJ" secondAttribute="bottom" constant="300" id="YB6-Ah-Hy0"/>
+                            <constraint firstItem="Kzh-rP-FMu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="5" id="dhw-zY-l0l"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
